Solidify changes for modules where it will work