@@ -27,7 +27,6 @@ tasks.withType(JavaCompile) {
 }
 
 test {
-    testLogging.showStandardStreams = true
     maxHeapSize = "1g"
     // Many tests do not clean up contexts properly. This makes the tests much
     // more resilient at the expense of performance.
@@ -44,8 +43,6 @@ test {
     systemProperty 'user.timezone', 'America/Los_Angeles'
     systemProperty 'file.encoding', 'UTF-8'
 
-    // Required for Junit tests
-    jvmArgs += ['--add-opens', 'org.hamcrest']
     // Required for JWT GUI tests
     jvmArgs += ['--add-opens', 'java.desktop/javax.swing.table=ALL-UNNAMED']
     // Required for some reflection tests
